--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import CTASection from '../components/CTASection.astro';
 // Imágenes del carrusel
 const carouselImages = [
   {
-    src: '/images/header-img.jpeg',
+    src: '/Meteoroled/images/header-img.jpeg',
     alt: 'Evento con pantallas LED'
   },
   {
@@ -139,7 +139,7 @@ const portfolio = [
               </svg>
               Cotizar Ahora
             </a>
-            <a href="/pantallas" class="btn btn-outline btn-lg">Ver Pantallas</a>
+            <a href="/Meteoroled/pantallas" class="btn btn-outline btn-lg">Ver Pantallas</a>
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@ const portfolio = [
             <div class="service-content">
               <h3>{service.title}</h3>
               <p>{service.description}</p>
-              <a href="/servicios" class="service-link">
+              <a href="/Meteoroled/servicios" class="service-link">
                 Más información
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -199,7 +199,7 @@ const portfolio = [
                 <span>{screen.ideal}</span>
               </div>
             </div>
-            <a href="/pantallas" class="btn btn-outline-dark btn-sm">Ver detalles</a>
+            <a href="/Meteoroled/pantallas" class="btn btn-outline-dark btn-sm">Ver detalles</a>
           </article>
         ))}
       </div>
@@ -227,7 +227,7 @@ const portfolio = [
       </div>
       
       <div class="section-cta">
-        <a href="/trabajos" class="btn btn-primary">Ver todos los trabajos</a>
+        <a href="/Meteoroled/trabajos" class="btn btn-primary">Ver todos los trabajos</a>
       </div>
     </div>
   </section>
