--- a/src/pages/pantallas.astro
+++ b/src/pages/pantallas.astro
@@ -6,7 +6,7 @@ import CTASection from '../components/CTASection.astro';
 
 const screens = [
   {
-    model: 'P2.5',
+    model: 'P2.8',
     pitch: '2.5mm',
     resolution: 'Alta definición',
     brightness: '800-1200 nits',
@@ -14,7 +14,7 @@ const screens = [
     environment: 'Interior',
     distance: '2-15 metros',
     ideal: ['Conferencias y presentaciones', 'Estudios de TV', 'Showrooms', 'Eventos VIP'],
-    image: 'https://images.unsplash.com/photo-1505373877841-8d25f7d46678?w=600&h=400&fit=crop',
+    image: '/Meteoroled/images/panelP2.8-image.jpg',
     featured: true
   },
   {
@@ -26,7 +26,7 @@ const screens = [
     environment: 'Interior',
     distance: '3-20 metros',
     ideal: ['Eventos corporativos', 'Ferias y exposiciones', 'Salones de eventos', 'Conciertos indoor'],
-    image: 'https://images.unsplash.com/photo-1540575467063-178a50c2df87?w=600&h=400&fit=crop',
+    image: '/Meteoroled/images/panelP3-image.jpg',
     featured: true
   },
   {
@@ -38,7 +38,7 @@ const screens = [
     environment: 'Interior / Exterior',
     distance: '5-30 metros',
     ideal: ['Conciertos y festivales', 'Eventos deportivos', 'Ferias outdoor', 'Publicidad exterior'],
-    image: 'https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?w=600&h=400&fit=crop',
+    image: '/Meteoroled/images/panelP5-image.jpg',
     featured: false
   },
   {
@@ -50,7 +50,7 @@ const screens = [
     environment: 'Exterior',
     distance: '10-100 metros',
     ideal: ['Estadios', 'Vía pública', 'Grandes festivales', 'Publicidad de largo alcance'],
-    image: 'https://images.unsplash.com/photo-1459749411175-04bf5292ceea?w=600&h=400&fit=crop',
+    image: '/Meteoroled/images/panelP10-image.jpg',
     featured: false
   }
 ];
@@ -271,7 +271,7 @@ const specs = [
 
   .screen-image img {
     width: 100%;
-    height: 100%;
+    height: 140%;
     object-fit: cover;
     object-position: center;
     display: block;
