--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,9 +12,9 @@ const { currentPage = '' } = Astro.props;
 const navLinks = [
   { href: '/Meteoroled/', label: 'Inicio', id: 'inicio' },
   { href: '/Meteoroled/servicios', label: 'Servicios', id: 'servicios' },
-  { href: '/Meteoroled/pantallas', label: 'Pantallas', id: 'pantallas' },
-  { href: '/Meteoroled/trabajos', label: 'Trabajos', id: 'trabajos' },
-  { href: '/Meteoroled/nosotros', label: 'Nosotros', id: 'nosotros' },
+  { href: '/Meteoroled/pantallas', label: 'Pantallas led', id: 'pantallas' },
+  { href: '/Meteoroled/trabajos', label: 'Proyectos', id: 'trabajos' },
+  { href: '/Meteoroled/nosotros', label: 'Empresa', id: 'nosotros' },
   { href: '/Meteoroled/contacto', label: 'Contacto', id: 'contacto' },
 ];
 
