--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -420,7 +420,8 @@ p { color: var(--text-body); }
   position: relative;
 }
 
-.carousel-slide img {
+.carousel-slide img,
+.carousel-slide video {
   width: 100%;
   height: 100%;
   object-fit: cover;
